--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 languageCode = "en-us"
 title = "My New Netlify Victor Hugo Site"
-publish_mode: editorial_workflow
+publish_mode = "editorial_workflow"
